--- a/deep-learning-essentials.ipynb
+++ b/deep-learning-essentials.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Deep Learning Essentials: A Comprehensive PyTorch Tutorial\n",
     "\n",
-    "Halfway through [CS231n](http://cs231n.stanford.edu/) lectures and assignments, I decided to write this tutorial on **PyTorch** and **the best neural network practices** by implementing an image classification project. Despite the problem being simple, it is a great starting point as many other Computer Vision problems like object detection and segmentation can be reduced to image classification. This tutorial is heavily inspired by the teachings of [Andrej Karpathy](https://karpathy.ai/). It covers the most basic and essential information you should definitely know if you’re getting started with your ML/DL career.\n",
+    "Halfway through [CS231n](http://cs231n.stanford.edu/) lectures and assignments, I decided to write this tutorial on **PyTorch** and **the best neural network practices** by implementing an image classification project. Despite the problem being simple, it is a great starting point as many other Computer Vision problems like object detection and segmentation are based on image classification. This tutorial is heavily inspired by the teachings of [Andrej Karpathy](https://karpathy.ai/). It covers the most basic and essential information you should definitely know if you’re getting started with your ML/DL career.\n",
     "\n",
     "To run this notebook locally:\n",
     "1. Download the CIFAR-10 dataset from [here](https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz) \n",
